# esp32

./: .gitignore
mqtt_esp32s3-R8N8/components/BSP/: CMakeLists.txt
mqtt_esp32s3-R8N8/components/BSP/BEEP/: beep.c  beep.h
mqtt_esp32s3-R8N8/components/BSP/LED/: led.h
mqtt_esp32s3-R8N8/components/BSP/USART/: usart.c  usart.h
mqtt_esp32s3-R8N8/main/: main.c
mqtt_esp32s3-R8N8/main/APP/: lwip_thread.c  lwip_thread.h  pressure_thread.c  temp_humi_thread.c  thread_init.c  thread_init.h  tip_thread.c  tip_thread.h  wifi_config.c
mqtt_esp32s3_master-R8N8/: sdkconfig
mqtt_esp32s3_master-R8N8/main/APP/: lwip_thread.c  lwip_thread.h  pressure_thread.c  thread_init.c  tip_thread.h  wifi_config.c
mqtt_esp32s3_record-R8N8/: CMakeLists.txt
mqtt_esp32s3_record-R8N8/main/APP/: lwip_thread.c  pressure_thread.c  pressure_thread.h  record_thread.h  temp_humi_thread.c  thread_init.c  tip_thread.c  wifi_config.c
mqtt_esp32s3_slave-R8N8/: README.md  sdkconfig  sdkconfig.old
mqtt_esp32s3_slave-R8N8/main/APP/: lwip_thread.c  lwip_thread.h  pressure_thread.c  pressure_thread.h  temp_humi_thread.c  thread_init.h  tip_thread.c  wifi_config.c
mqtt_esp_host-R8N8/: partitions-8MiB.csv  sdkconfig.old
mqtt_esp_host-R8N8/main/: main.c
mqtt_esp_host-R8N8/main/APP/: lwip_thread.c  tip_thread.c  (+3 more)
pressure_deice_host/: sdkconfig.old
pressure_deice_host/main/: main.c
sanzhou_test/outsourcing_esp32s3_low_com/: CMakeLists.txt  sdkconfig  sdkconfig.old
sdcard_test/: sdkconfig
sdcard_test-R8N8/: sdkconfig  sdkconfig.old
sdcard_test-R8N8/main/: main.c
sdcard_test/main/: main.c
(+31 files in other folders)
